--- a/.harness/NGPipeAutoB6qllzHktxfilePath.yaml
+++ b/.harness/NGPipeAutoB6qllzHktxfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoB6qllzHktx
-  tags: {}
   name: NGPipeAutoB6qllzHktx
-  type: PreProduction
+  identifier: NGPipeAutoB6qllzHktx
+  tags: {
+    }
+  type: Production
