--- a/.harness/NGPipeAutopfj5sS3C0rfilePath.yaml
+++ b/.harness/NGPipeAutopfj5sS3C0rfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutopfj5sS3C0r
-  tags: {}
   name: NGPipeAutopfj5sS3C0r
-  type: PreProduction
+  identifier: NGPipeAutopfj5sS3C0r
+  tags: {
+    }
+  type: Production
