a new commit message

--- a/.harness/testRemote/pl_auto_environment_pWGMQ.yaml
+++ b/.harness/testRemote/pl_auto_environment_pWGMQ.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_pWGMQ
   tags: {}
   name: pl_auto_environment_pWGMQ
-  type: PreProduction
+  type: Invalid
