a new commit message

--- a/.harness/testRemote/pl_auto_environment_ANb7e.yaml
+++ b/.harness/testRemote/pl_auto_environment_ANb7e.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_ANb7e
   tags: {}
   name: pl_auto_environment_ANb7e
-  type: PreProduction
+  type: Invalid
