--- a/.harness/testRemote/pl_auto_environment_mWXKA.yaml
+++ b/.harness/testRemote/pl_auto_environment_mWXKA.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_mWXKA
   tags: {}
   name: pl_auto_environment_mWXKA
-  type: PreProduction
+  type: Invalid
