--- a/.harness/testRemote/pl_auto_pipeline_qspTY.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_qspTY.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_qspTY
-  identifier: pl_auto_pipeline_qspTY
+unknown:
+  name: pl_auto_unknown_qspTY
+  identifier: pl_auto_unknown_qspTY
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
