--- a/.harness/testRemote/pl_auto_environment_nDtWr.yaml
+++ b/.harness/testRemote/pl_auto_environment_nDtWr.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_nDtWr
   tags: {}
   name: pl_auto_environment_nDtWr
-  type: PreProduction
+  type: Invalid
