a new commit message

--- a/.harness/testRemote/pl_auto_environment_KxDTt.yaml
+++ b/.harness/testRemote/pl_auto_environment_KxDTt.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_KxDTt
   tags: {}
   name: pl_auto_environment_KxDTt
-  type: PreProduction
+  type: Invalid
