--- a/.harness/NGPipeAutoDpCb76KUX1filePath.yaml
+++ b/.harness/NGPipeAutoDpCb76KUX1filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoDpCb76KUX1
-  tags: {}
   name: NGPipeAutoDpCb76KUX1
-  type: PreProduction
+  identifier: NGPipeAutoDpCb76KUX1
+  tags: {
+    }
+  type: Production
