Harness.io Git Commit

--- a/.harness/BulkReconciliationTests/NGPipeAuto_ActStepGroupTemp_AUTcN8HKb7filePath.yaml
+++ b/.harness/BulkReconciliationTests/NGPipeAuto_ActStepGroupTemp_AUTcN8HKb7filePath.yaml
@@ -19,3 +19,6 @@ template:
           template:
             templateRef: account.NGPipeAuto_ActStepTemptq7sb8GeJy
             versionLabel: Act_Step_v1
+            templateInputs:
+              type: ShellScript
+              timeout: <+input>
