--- a/.harness/NGPipeAutoY7fHb5MJmx/filePath.yaml
+++ b/.harness/NGPipeAutoY7fHb5MJmx/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoY7fHb5MJmx
   identifier: NGPipeAutoY7fHb5MJmx
-  environmentRef: account.NGPipeAutoHnhYTxTlSM
+  environmentRef: NGPipeAutoHnhYTxTlSM
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
