--- a/.harness/testRemoteTemplate/pl_auto_pipeline_WITXM.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_WITXM.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added 90nNuh
+        description: Desc Added nXd5RB
         type: Approval
         spec:
           execution:
