--- a/.harness/NGPipeAutoENFhikkHdUfilePath.yaml
+++ b/.harness/NGPipeAutoENFhikkHdUfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoENFhikkHdU
-  tags: {}
   name: NGPipeAutoENFhikkHdU
-  type: PreProduction
+  identifier: NGPipeAutoENFhikkHdU
+  tags: {
+    }
+  type: Production
