--- a/.harness/NGPipeAutoOkk4S4YFvwfilePath.yaml
+++ b/.harness/NGPipeAutoOkk4S4YFvwfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoOkk4S4YFvw
-  tags: {}
   name: NGPipeAutoOkk4S4YFvw
-  type: PreProduction
+  identifier: NGPipeAutoOkk4S4YFvw
+  tags: {
+    }
+  type: Production
