--- a/.harness/NGPipeAutoL6xK0rKMyAfilePath.yaml
+++ b/.harness/NGPipeAutoL6xK0rKMyAfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoL6xK0rKMyA
-  tags: {}
   name: NGPipeAutoL6xK0rKMyA
-  type: PreProduction
+  identifier: NGPipeAutoL6xK0rKMyA
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
