--- a/.harness/NGPipeAutoYyKdoqnazjfilePath.yaml
+++ b/.harness/NGPipeAutoYyKdoqnazjfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoYyKdoqnazj
+  identifier: NGPipeAutoYyKdoqnazj
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcB2IPJ3AXR7
-  identifier: NGPipeAutoYyKdoqnazj
-  tags: {}
-  name: NGPipeAutoYyKdoqnazj
-  type: PreProduction
+  tags: {
+    }
+  type: Production
