--- a/.harness/NGPipeAuto2gm2gynP7NfilePath.yaml
+++ b/.harness/NGPipeAuto2gm2gynP7NfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto2gm2gynP7N
-  tags: {}
   name: NGPipeAuto2gm2gynP7N
-  type: PreProduction
+  identifier: NGPipeAuto2gm2gynP7N
+  tags: {
+    }
+  type: Production
