--- a/.harness/NGPipeAutorp6PU48ucXfilePath.yaml
+++ b/.harness/NGPipeAutorp6PU48ucXfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutorp6PU48ucX
+  identifier: NGPipeAutorp6PU48ucX
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvc8Lk3MEIYyn
-  identifier: NGPipeAutorp6PU48ucX
-  tags: {}
-  name: NGPipeAutorp6PU48ucX
-  type: PreProduction
+  tags: {
+    }
+  type: Production
