--- a/.harness/NGPipeAutopWpDvWI2prfilePath.yaml
+++ b/.harness/NGPipeAutopWpDvWI2prfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutopWpDvWI2pr
+  identifier: NGPipeAutopWpDvWI2pr
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvc8Lk3MEIYyn
-  identifier: NGPipeAutopWpDvWI2pr
-  tags: {}
-  name: NGPipeAutopWpDvWI2pr
-  type: PreProduction
+  tags: {
+    }
+  type: Production
