--- a/.harness/NGPipeAutojDETWbMlCVfilePath.yaml
+++ b/.harness/NGPipeAutojDETWbMlCVfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutojDETWbMlCV
-  tags: {}
   name: NGPipeAutojDETWbMlCV
-  type: PreProduction
+  identifier: NGPipeAutojDETWbMlCV
+  tags: {
+    }
+  type: Production
