--- a/.harness/NGPipeAutoqcUMAxGJlGfilePath.yaml
+++ b/.harness/NGPipeAutoqcUMAxGJlGfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoqcUMAxGJlG
-  tags: {}
   name: NGPipeAutoqcUMAxGJlG
-  type: PreProduction
+  identifier: NGPipeAutoqcUMAxGJlG
+  tags: {
+    }
+  type: Production
