a new commit message

--- a/.harness/testRemote/pl_auto_environment_kaNG3.yaml
+++ b/.harness/testRemote/pl_auto_environment_kaNG3.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_kaNG3
   tags: {}
   name: pl_auto_environment_kaNG3
-  type: PreProduction
+  type: Invalid
