--- a/.harness/testRemote/pl_auto_pipeline_sFhUi.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_sFhUi.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_sFhUi
-  identifier: pl_auto_pipeline_sFhUi
+unknown:
+  name: pl_auto_unknown_sFhUi
+  identifier: pl_auto_unknown_sFhUi
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
