--- a/.harness/testRemote/pl_auto_environment_fgRbg.yaml
+++ b/.harness/testRemote/pl_auto_environment_fgRbg.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_fgRbg
   tags: {}
   name: pl_auto_environment_fgRbg
-  type: PreProduction
+  type: Invalid
