--- a/.harness/testRemote/pl_auto_infra_MkuFG.yaml
+++ b/.harness/testRemote/pl_auto_infra_MkuFG.yaml
@@ -4,7 +4,7 @@ infrastructureDefinition:
   orgIdentifier: Simlified_Git_sync
   environmentRef: pl_auto_environment_Yx0eT
   deploymentType: Kubernetes
-  type: KubernetesDirect
+  type: Invalid
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
     namespace: default
