--- a/.harness/BulkReconciliationTests/NGPipeAuto_ActStepGroupTemp_cFxr5trTOffilePath.yaml
+++ b/.harness/BulkReconciliationTests/NGPipeAuto_ActStepGroupTemp_cFxr5trTOffilePath.yaml
@@ -19,3 +19,6 @@ template:
           template:
             templateRef: account.NGPipeAuto_ActStepTempHKJ2CfBGfk
             versionLabel: Act_Step_v1
+            templateInputs:
+              type: ShellScript
+              timeout: <+input>
