a new commit message

--- a/.harness/testRemote/pl_auto_environment_DWDeo.yaml
+++ b/.harness/testRemote/pl_auto_environment_DWDeo.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_DWDeo
   tags: {}
   name: pl_auto_environment_DWDeo
-  type: PreProduction
+  type: Invalid
