--- a/.harness/testRemote/pl_auto_environment_p8hTN.yaml
+++ b/.harness/testRemote/pl_auto_environment_p8hTN.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_p8hTN
   tags: {}
   name: pl_auto_environment_p8hTN
-  type: PreProduction
+  type: Invalid
