--- a/.harness/testRemote/pl_auto_pipeline_CiAlT.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_CiAlT.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_CiAlT
-  identifier: pl_auto_pipeline_CiAlT
+unknown:
+  name: pl_auto_unknown_CiAlT
+  identifier: pl_auto_unknown_CiAlT
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
