--- a/.harness/NGPipeAutojqiCWIMn1xfilePath.yaml
+++ b/.harness/NGPipeAutojqiCWIMn1xfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutojqiCWIMn1x
-  tags: {}
   name: NGPipeAutojqiCWIMn1x
-  type: PreProduction
+  identifier: NGPipeAutojqiCWIMn1x
+  tags: {
+    }
+  type: Production
