--- a/.harness/NGPipeAutoPG6KQom4ojfilePath.yaml
+++ b/.harness/NGPipeAutoPG6KQom4ojfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPG6KQom4oj
-  tags: {}
   name: NGPipeAutoPG6KQom4oj
-  type: PreProduction
+  identifier: NGPipeAutoPG6KQom4oj
+  tags: {
+    }
+  type: Production
