--- a/.harness/NGPipeAutoiJqtRAZEj4filePath.yaml
+++ b/.harness/NGPipeAutoiJqtRAZEj4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoiJqtRAZEj4
-  tags: {}
   name: NGPipeAutoiJqtRAZEj4
-  type: PreProduction
+  identifier: NGPipeAutoiJqtRAZEj4
+  tags: {
+    }
+  type: Production
