--- a/.harness/NGPipeAutoqsHgiXskgQfilePath.yaml
+++ b/.harness/NGPipeAutoqsHgiXskgQfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoqsHgiXskgQ
-  tags: {}
   name: NGPipeAutoqsHgiXskgQ
-  type: PreProduction
+  identifier: NGPipeAutoqsHgiXskgQ
+  tags: {
+    }
+  type: Production
