--- a/.harness/BulkReconciliationTests/NGPipeAuto_ActStepGroupTemp_xUFBlGWIlcfilePath.yaml
+++ b/.harness/BulkReconciliationTests/NGPipeAuto_ActStepGroupTemp_xUFBlGWIlcfilePath.yaml
@@ -19,3 +19,6 @@ template:
           template:
             templateRef: account.NGPipeAuto_ActStepTempePMv7UMTBh
             versionLabel: Act_Step_v1
+            templateInputs:
+              type: ShellScript
+              timeout: <+input>
