--- a/.harness/testRemote/pl_auto_environment_8J6Kj.yaml
+++ b/.harness/testRemote/pl_auto_environment_8J6Kj.yaml
@@ -1,6 +1,7 @@
 environment:
   orgIdentifier: Simlified_Git_sync
   identifier: pl_auto_environment_8J6Kj
-  tags: {}
+  tags:  
+    tag: tag
   name: pl_auto_environment_8J6Kj
   type: PreProduction
