--- a/.harness/NGPipeAutoMhtD5jG3s5filePath.yaml
+++ b/.harness/NGPipeAutoMhtD5jG3s5filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoMhtD5jG3s5
-  tags: {}
   name: NGPipeAutoMhtD5jG3s5
-  type: PreProduction
+  identifier: NGPipeAutoMhtD5jG3s5
+  tags: {
+    }
+  type: Production
