--- a/.harness/NGPipeAutoXAPCAcagJHfilePath.yaml
+++ b/.harness/NGPipeAutoXAPCAcagJHfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoXAPCAcagJH
-  tags: {}
   name: NGPipeAutoXAPCAcagJH
-  type: PreProduction
+  identifier: NGPipeAutoXAPCAcagJH
+  tags: {
+    }
+  type: Production
