--- a/.harness/NGPipeAutoGaJbpXa5LefilePath.yaml
+++ b/.harness/NGPipeAutoGaJbpXa5LefilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoGaJbpXa5Le
-  tags: {}
   name: NGPipeAutoGaJbpXa5Le
-  type: PreProduction
+  identifier: NGPipeAutoGaJbpXa5Le
+  tags: {
+    }
+  type: Production
