--- a/.harness/NGPipeAutobmpGn8lyvWfilePath.yaml
+++ b/.harness/NGPipeAutobmpGn8lyvWfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutobmpGn8lyvW
-  tags: {}
   name: NGPipeAutobmpGn8lyvW
-  type: PreProduction
+  identifier: NGPipeAutobmpGn8lyvW
+  tags: {
+    }
+  type: Production
