--- a/.harness/NGPipeAutoFWKYAmom8IfilePath.yaml
+++ b/.harness/NGPipeAutoFWKYAmom8IfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoFWKYAmom8I
-  tags: {}
   name: NGPipeAutoFWKYAmom8I
-  type: PreProduction
+  identifier: NGPipeAutoFWKYAmom8I
+  tags: {
+    }
+  type: Production
