--- a/.harness/NGPipeAutorDKCDYx9p7filePath.yaml
+++ b/.harness/NGPipeAutorDKCDYx9p7filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutorDKCDYx9p7
-  tags: {}
   name: NGPipeAutorDKCDYx9p7
-  type: PreProduction
+  identifier: NGPipeAutorDKCDYx9p7
+  tags: {
+    }
+  type: Production
