a new commit message

--- a/.harness/testRemote/pl_auto_environment_AxC9o.yaml
+++ b/.harness/testRemote/pl_auto_environment_AxC9o.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_AxC9o
   tags: {}
   name: pl_auto_environment_AxC9o
-  type: PreProduction
+  type: Invalid
