a new commit message

--- a/.harness/testRemote/pl_auto_pipeline_LMioO.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_LMioO.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_LMioO
-  identifier: pl_auto_pipeline_LMioO
+unknown:
+  name: pl_auto_unknown_LMioO
+  identifier: pl_auto_unknown_LMioO
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
