--- a/.harness/NGPipeAutoYFjD9ylqlYfilePath.yaml
+++ b/.harness/NGPipeAutoYFjD9ylqlYfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoYFjD9ylqlY
-  tags: {}
   name: NGPipeAutoYFjD9ylqlY
-  type: PreProduction
+  identifier: NGPipeAutoYFjD9ylqlY
+  tags: {
+    }
+  type: Production
