--- a/.harness/NGPipeAutolSB28KH8I4filePath.yaml
+++ b/.harness/NGPipeAutolSB28KH8I4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutolSB28KH8I4
-  tags: {}
   name: NGPipeAutolSB28KH8I4
-  type: PreProduction
+  identifier: NGPipeAutolSB28KH8I4
+  tags: {
+    }
+  type: Production
