--- a/.harness/NGPipeAutoEKtiVm00pg/filePath.yaml
+++ b/.harness/NGPipeAutoEKtiVm00pg/filePath.yaml
@@ -1,11 +1,11 @@
 infrastructureDefinition:
   name: NGPipeAutoEKtiVm00pg
   identifier: NGPipeAutoEKtiVm00pg
-  environmentRef: account.NGPipeAutoNee9p5Tuss
+  environmentRef: NGPipeAutoNee9p5Tuss
   deploymentType: Kubernetes
   type: KubernetesDirect
   spec:
     connectorRef: account.GithubAppAuthenticationAccountConnectorForAutomationTest
-    namespace: default
+    namespace: <+input>
     releaseName: release-<+INFRA_KEY_SHORT_ID>
   allowSimultaneousDeployments: true
