--- a/.harness/NGPipeAuto5W2P5fzXCFfilePath.yaml
+++ b/.harness/NGPipeAuto5W2P5fzXCFfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto5W2P5fzXCF
-  tags: {}
   name: NGPipeAuto5W2P5fzXCF
-  type: PreProduction
+  identifier: NGPipeAuto5W2P5fzXCF
+  tags: {
+    }
+  type: Production
