--- a/.harness/NGPipeAutoOmNLQuVJ8AfilePath.yaml
+++ b/.harness/NGPipeAutoOmNLQuVJ8AfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoOmNLQuVJ8A
-  tags: {}
   name: NGPipeAutoOmNLQuVJ8A
-  type: PreProduction
+  identifier: NGPipeAutoOmNLQuVJ8A
+  tags: {
+    }
+  type: Production
