--- a/.harness/NGPipeAutoodeVqlzl4mfilePath.yaml
+++ b/.harness/NGPipeAutoodeVqlzl4mfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoodeVqlzl4m
-  tags: {}
   name: NGPipeAutoodeVqlzl4m
-  type: PreProduction
+  identifier: NGPipeAutoodeVqlzl4m
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
