--- a/.harness/NGPipeAutoq3AI86y6OdfilePath.yaml
+++ b/.harness/NGPipeAutoq3AI86y6OdfilePath.yaml
@@ -1,6 +1,7 @@
 environment:
-  orgIdentifier: Pipelines_NonK8s_Org_NG
-  identifier: NGPipeAutoq3AI86y6Od
-  tags: {}
   name: NGPipeAutoq3AI86y6Od
-  type: PreProduction
+  identifier: NGPipeAutoq3AI86y6Od
+  orgIdentifier: Pipelines_NonK8s_Org_NG
+  tags: {
+    }
+  type: Production
