--- a/.harness/NGPipeAutoMj4Xb7TFeTfilePath.yaml
+++ b/.harness/NGPipeAutoMj4Xb7TFeTfilePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoMj4Xb7TFeT
+  identifier: NGPipeAutoMj4Xb7TFeT
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcEnjKi6wkQa
-  identifier: NGPipeAutoMj4Xb7TFeT
-  tags: {}
-  name: NGPipeAutoMj4Xb7TFeT
-  type: PreProduction
+  tags: {
+    }
+  type: Production
