--- a/.harness/NGPipeAutoeOlqxjAEw7filePath.yaml
+++ b/.harness/NGPipeAutoeOlqxjAEw7filePath.yaml
@@ -1,7 +1,8 @@
 environment:
+  name: NGPipeAutoeOlqxjAEw7
+  identifier: NGPipeAutoeOlqxjAEw7
   orgIdentifier: Pipelines_NonK8s_Org_NG
   projectIdentifier: NGPipeAutoPipelineSvcEnjKi6wkQa
-  identifier: NGPipeAutoeOlqxjAEw7
-  tags: {}
-  name: NGPipeAutoeOlqxjAEw7
-  type: PreProduction
+  tags: {
+    }
+  type: Production
