--- a/.harness/testRemoteTemplate/pl_auto_pipeline_rlqwO.yaml
+++ b/.harness/testRemoteTemplate/pl_auto_pipeline_rlqwO.yaml
@@ -8,7 +8,7 @@ pipeline:
     - stage:
         name: s1
         identifier: s1
-        description: Desc Added is2HFY
+        description: Desc Added 8JVsiZ
         type: Approval
         spec:
           execution:
