--- a/.harness/testRemote/pl_auto_pipeline_caYVZ.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_caYVZ.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_caYVZ
-  identifier: pl_auto_pipeline_caYVZ
+unknown:
+  name: pl_auto_unknown_caYVZ
+  identifier: pl_auto_unknown_caYVZ
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
