a new commit message

--- a/.harness/testRemote/pl_auto_environment_f1Oh8.yaml
+++ b/.harness/testRemote/pl_auto_environment_f1Oh8.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_f1Oh8
   tags: {}
   name: pl_auto_environment_f1Oh8
-  type: PreProduction
+  type: Invalid
