--- a/.harness/NGPipeAuto1zUxiNMKVffilePath.yaml
+++ b/.harness/NGPipeAuto1zUxiNMKVffilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAuto1zUxiNMKVf
-  tags: {}
   name: NGPipeAuto1zUxiNMKVf
-  type: PreProduction
+  identifier: NGPipeAuto1zUxiNMKVf
+  tags: {
+    }
+  type: Production
