--- a/.harness/NGPipeAutobBvi8Z6dW7filePath.yaml
+++ b/.harness/NGPipeAutobBvi8Z6dW7filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutobBvi8Z6dW7
-  tags: {}
   name: NGPipeAutobBvi8Z6dW7
-  type: PreProduction
+  identifier: NGPipeAutobBvi8Z6dW7
+  tags: {
+    }
+  type: Production
