--- a/.harness/NGPipeAutox0WLkjCqdifilePath.yaml
+++ b/.harness/NGPipeAutox0WLkjCqdifilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutox0WLkjCqdi
-  tags: {}
   name: NGPipeAutox0WLkjCqdi
-  type: PreProduction
+  identifier: NGPipeAutox0WLkjCqdi
+  tags: {
+    }
+  type: Production
