--- a/.harness/NGPipeAutoQtRxZ2V5DafilePath.yaml
+++ b/.harness/NGPipeAutoQtRxZ2V5DafilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoQtRxZ2V5Da
-  tags: {}
   name: NGPipeAutoQtRxZ2V5Da
-  type: PreProduction
+  identifier: NGPipeAutoQtRxZ2V5Da
+  tags: {
+    }
+  type: Production
