--- a/.harness/NGPipeAutoIINdHqZ3U4filePath.yaml
+++ b/.harness/NGPipeAutoIINdHqZ3U4filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoIINdHqZ3U4
-  tags: {}
   name: NGPipeAutoIINdHqZ3U4
-  type: PreProduction
+  identifier: NGPipeAutoIINdHqZ3U4
+  tags: {
+    }
+  type: Production
