--- a/.harness/NGPipeAutoQBtPNNk6C5filePath.yaml
+++ b/.harness/NGPipeAutoQBtPNNk6C5filePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoQBtPNNk6C5
-  tags: {}
   name: NGPipeAutoQBtPNNk6C5
-  type: PreProduction
+  identifier: NGPipeAutoQBtPNNk6C5
+  tags: {
+    }
+  type: Production
