--- a/.harness/NGPipeAutoPXTolO7dirfilePath.yaml
+++ b/.harness/NGPipeAutoPXTolO7dirfilePath.yaml
@@ -1,5 +1,6 @@
 environment:
-  identifier: NGPipeAutoPXTolO7dir
-  tags: {}
   name: NGPipeAutoPXTolO7dir
-  type: PreProduction
+  identifier: NGPipeAutoPXTolO7dir
+  tags: {
+    }
+  type: Production
