--- a/.harness/testRemote/pl_auto_environment_lIrII.yaml
+++ b/.harness/testRemote/pl_auto_environment_lIrII.yaml
@@ -3,4 +3,4 @@ environment:
   identifier: pl_auto_environment_lIrII
   tags: {}
   name: pl_auto_environment_lIrII
-  type: PreProduction
+  type: Invalid
