--- a/.harness/testRemote/pl_auto_pipeline_rErlI.yaml
+++ b/.harness/testRemote/pl_auto_pipeline_rErlI.yaml
@@ -1,6 +1,6 @@
-pipeline:
-  name: pl_auto_pipeline_rErlI
-  identifier: pl_auto_pipeline_rErlI
+unknown:
+  name: pl_auto_unknown_rErlI
+  identifier: pl_auto_unknown_rErlI
   projectIdentifier: SimplifiedGitSync_Do_Not_Delete
   orgIdentifier: Simlified_Git_sync
   tags: { }
